--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -77,6 +77,19 @@
   timestamp = {2022.06.22},
 }
 
+@Article{Abdelsadek2017,
+  author        = {Abdelsadek, Y. and Chelghoum, K. and Herrmann, F. and Kacem, I. and Otjacques, B.},
+  title         = {Community extraction and visualization in social networks applied to Twitter},
+  journal       = {Information Sciences},
+  year          = {2018},
+  volume        = {424},
+  pages         = {204-223},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.ins.2017.09.022},
+  owner         = {Vincent},
+  timestamp     = {2017.09.20},
+}
+
 @Article{AbdulRahman2013,
   author    = {Abdul-Rahman, A. and Lein, J. and Coles, K. and Maguire, E. and Meyer, M. and Wynne, M. and Johnson, C. R. and Trefethen, A. and Chen, M.},
   title     = {Rule-based Visual Mappings - with a Case Study on Poetry Visualization},
@@ -2655,6 +2668,17 @@
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {http://archiv.ub.uni-heidelberg.de/propylaeumdok/1774/1/Assmann_Communicative_and_cultural_memory_2008.pdf},
+}
+
+@InProceedings{Asta2015,
+  author    = {Asta, D. M. and Shalizi, C. R.},
+  title     = {Geometric network comparison},
+  booktitle = {31st Conference on Uncertainty in Artificial Intelligence},
+  year      = {2015},
+  pages     = {249},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+  url       = {auai.org/uai2015/proceedings/papers/249.pdf},
 }
 
 @Article{AtwellSeate2015,
@@ -8060,6 +8084,19 @@
   timestamp = {2023.11.28},
 }
 
+@Article{Brodka2018,
+  author    = {Bródka, P. and Chmiel, A. and Magnani, M. and Ragozini, G.},
+  title     = {Quantifying layer similarity in multiplex networks: a systematic study},
+  journal   = {Royal Society Open Science},
+  year      = {2018},
+  volume    = {5},
+  number    = {8},
+  pages     = {171747},
+  doi       = {10.1098/rsos.171747},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
 @TechReport{Broennimann2013,
   author      = {Brönnimann, L.},
   title       = {Multilanguage sentiment-analysis of Twitter data on the example of Swiss politicians},
@@ -10839,6 +10876,29 @@
   doi       = {10.3390/app11115043},
   owner     = {Vincent},
   timestamp = {2020.02.08},
+}
+
+@Article{Chen2020q,
+  author    = {Chen, H. and Yu, Z. and Yang, Q. and Shao, J.},
+  title     = {Attributed graph clustering with subspace stochastic block model},
+  journal   = {Information Sciences},
+  year      = {2020},
+  volume    = {535},
+  pages     = {130–141},
+  doi       = {10.1016/j.ins.2020.05.044},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
+@InProceedings{Chen2020r,
+  author    = {Chen, X. and Heimann, M. and Vahedian, F. and Koutra, D.},
+  title     = {CONE-Align: Consistent Network Alignment with Proximity-Preserving Node Embedding},
+  booktitle = {29th ACM International Conference on Information \&amp; Knowledge Management},
+  year      = {2020},
+  pages     = {1985-1988},
+  doi       = {10.1145/3340531.3412136},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
 }
 
 @InProceedings{Chen2021h,
@@ -13692,6 +13752,18 @@
   url       = {https://www.aclweb.org/anthology/W16-6328},
 }
 
+@Article{Das2018,
+  author    = {Das, K. and Samanta, S. and Pal, M.},
+  title     = {Study on centrality measures in social networks: a survey},
+  journal   = {Social Network Analysis and Mining},
+  year      = {2018},
+  volume    = {8},
+  pages     = {13},
+  doi       = {10.1007/s13278-018-0493-2},
+  owner     = {Vincent},
+  timestamp = {2023.10.17},
+}
+
 @Article{Das2021,
   author    = {Das, S. and Paik, J. H.},
   title     = {Context-sensitive gender inference of named entities in text},
@@ -14790,6 +14862,18 @@
   timestamp = {2019.04.11},
 }
 
+@InProceedings{Ding2001,
+  author    = {Ding, C. H. Q. and He, X. F. and Zha, H. Y. and Gu, M. and Simon, H. D.},
+  title     = {A min-max cut algorithm for graph partitioning and data clustering},
+  booktitle = {1st IEEE International Conference on Data Mining},
+  year      = {2001},
+  pages     = {107-114},
+  doi       = {10.1109/ICDM.2001.989507},
+  groups    = {Spectral (CD)},
+  owner     = {Vincent},
+  timestamp = {2012.07.28},
+}
+
 @InProceedings{Ding2010,
   author    = {Ding, L. and Yilmaz, A.},
   title     = {Learning Relations Among Movie Characters: A Social Networks Perspective},
@@ -15558,6 +15642,45 @@
   doi       = {10.1016/j.sbspro.2013.05.053},
   owner     = {Vincent},
   timestamp = {2020.07.23},
+}
+
+@Article{Drif2020,
+  author    = {Drif, A. and Zerrad, H. Eddine and Cherifi, H.},
+  title     = {EnsVAE: Ensemble Variational Autoencoders for Recommendations},
+  journal   = {IEEE Access},
+  year      = {2020},
+  volume    = {8},
+  pages     = {188335–188351},
+  doi       = {10.1109/access.2020.3030693},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
+@InProceedings{Drif2021,
+  author    = {Drif, Ahlem and Guembour, Sami and Cherifi, Hocine},
+  title     = {A Sentiment Enhanced Deep Collaborative Filtering Recommender System},
+  booktitle = {International Conference on Complex Networks and Their Applications},
+  year      = {2021},
+  volume    = {944},
+  series    = {Studies in Computational Intelligence},
+  pages     = {66-78},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-65351-4_6},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
+@Article{Drif2022,
+  author    = {Drif, A. and Cherifi, H.},
+  title     = {MIGAN: Mutual-Interaction Graph Attention Network for Collaborative Filtering},
+  journal   = {Entropy},
+  year      = {2022},
+  volume    = {24},
+  number    = {8},
+  pages     = {1084},
+  doi       = {10.3390/e24081084},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
 }
 
 @Article{Drod2016,
@@ -26879,6 +27002,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1806.05341},
 }
 
+@Article{Huang2018l,
+  author    = {Huang, W. and Ribeiro, A.},
+  title     = {Network Comparison: Embeddings and Interiors},
+  journal   = {IEEE Transactions on Signal Processing},
+  year      = {2018},
+  volume    = {66},
+  number    = {2},
+  pages     = {412-427},
+  doi       = {10.1109/tsp.2017.2764848},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
 @InProceedings{Huang2019,
   author    = {Huang, J. and Xiang, C. and Yuan, S. and Yuan, D. and Huang, X.},
   title     = {Character-Aware Convolutional Recurrent Networks with Self-Attention for Emotion Detection on Twitter},
@@ -29644,6 +29780,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1218955.1219005},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Kardan2013,
+  author    = {Kardan, A. A. and Ebrahimi, M.},
+  title     = {A novel approach to hybrid recommendation systems based on association rules mining for content recommendation in asynchronous discussion groups},
+  journal   = {Information Sciences},
+  year      = {2013},
+  volume    = {219},
+  pages     = {93–110},
+  doi       = {10.1016/j.ins.2012.07.011},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
 }
 
 @Article{Karlgren1952,
@@ -32963,6 +33111,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://hal.archives-ouvertes.fr/hal-03503915},
 }
 
+@InProceedings{Lafhel2022,
+  author    = {Lafhel, M. and Abrouk, L. and Cherifi, H. and Hassouni, M. E.},
+  title     = {The similarity between movie scripts using Multilayer Network Laplacian Spectra Descriptor},
+  booktitle = {IEEE Workshop on Complexity in Engineering},
+  year      = {2022},
+  pages     = {1-5},
+  doi       = {10.1109/compeng50184.2022.9905452},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
 @Article{Lafhel2024,
   author    = {Lafhel, M. and Cherifi, H. and Renoust, B. and El Hassouni, M.},
   title     = {Comparison of Graph Distance Measures for Movie Similarity Using a Multilayer Network Model},
@@ -35450,6 +35609,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.20},
 }
 
+@Article{Li2019ad,
+  author    = {Li, B. and Pi, D.},
+  title     = {Learning deep neural networks for node classification},
+  journal   = {Expert Systems with Applications},
+  year      = {2019},
+  volume    = {137},
+  pages     = {324–334},
+  doi       = {10.1016/j.eswa.2019.07.006},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
 @InProceedings{Li2019b,
   author    = {Li, D. and Huang, L. and Ji, H. and Han, J.},
   title     = {Biomedical Event Extraction based on Knowledge-driven Tree},
@@ -35618,6 +35789,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tpami.2009.150},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Liao2018a,
+  author    = {Liao, L. and He, X. and Zhang, H. and Chua, T.-S.},
+  title     = {Attributed Social Network Embedding},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2018},
+  volume    = {30},
+  number    = {12},
+  pages     = {2257-2270},
+  doi       = {10.1109/tkde.2018.2819980},
+  owner     = {Vincent},
+  timestamp = {2020.11.13},
 }
 
 @InProceedings{LibenNowell2003,
@@ -36271,6 +36455,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.11.09},
 }
 
+@InProceedings{Liu2020h,
+  author        = {Liu, F. and Xue, S. and Wu, J. and Zhou, C. and Hu, W. and Paris, C. and Nepal, S. and Yang, J. and Yu, P. S.},
+  title         = {Deep Learning for Community Detection: Progress, Challenges and Opportunities},
+  booktitle     = {29th International Joint Conference on Artificial Intelligence},
+  year          = {2020},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2020.05.21},
+  url           = {https://arxiv.org/abs/2005.08225},
+}
+
 @Article{Liu2021,
   author    = {Liu, N. and Xu, Z. and Zeng, X.-J. and Ren, P.},
   title     = {An agglomerative hierarchical clustering algorithm for linear ordinal rankings},
@@ -36349,6 +36544,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.11.28},
   url       = {https://www.routledge.com/Making-Sense-of-Television-The-Psychology-of-Audience-Interpretation/Livingstone/p/book/9780415185363},
+}
+
+@Article{Loan1976,
+  author    = {Van Loan, C. F.},
+  title     = {Generalizing the Singular Value Decomposition},
+  journal   = {SIAM Journal on Numerical Analysis},
+  year      = {1976},
+  volume    = {13},
+  number    = {1},
+  pages     = {76–83},
+  doi       = {10.1137/0713009},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
 }
 
 @Article{LoBue2015,
@@ -51461,6 +51669,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.01.14},
 }
 
+@Article{Saxena2019,
+  author    = {Saxena, R. and Kaur, S. and Bhatnagar, V.},
+  title     = {Identifying similar networks using structural hierarchy},
+  journal   = {Physica A},
+  year      = {2019},
+  volume    = {536},
+  pages     = {121029},
+  doi       = {10.1016/j.physa.2019.04.265},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
 @Article{Sayers1991,
   author    = {Sayers, W.},
   title     = {Clontarf, and the Irish destinies of Sigurðr Digri, Earl of Orkney, and Þorsteinn Síðu-Hallsson},
@@ -60525,6 +60745,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.04.20},
 }
 
+@InProceedings{Wang2019ac,
+  author    = {Wang, C. and Pan, S. and Hu, R. and Long, G. and Jiang, J. and Zhang, C.},
+  title     = {Attributed graph clustering: A deep attentional embedding approach},
+  booktitle = {28th International Joint Conference on Artificial Intelligence},
+  year      = {2019},
+  pages     = {3670-3676},
+  doi       = {10.24963/ijcai.2019/509},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
 @Article{Wang2020,
   author    = {Wang, P. and Lu, J.-A. and Jin, Y. and Zhu, M. and Wang, L. and Chen, S.},
   title     = {Statistical and network analysis of 1212 {COVID}-19 patients in Henan, China},
@@ -62370,6 +62601,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ICME.2010.5582982},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@Article{Xiao2013,
+  author    = {Xiao, Q.},
+  title     = {A Method for Measuring Node Importance in Hypernetwork Model},
+  journal   = {Research Journal of Applied Sciences, Engineering and Technology},
+  year      = {2013},
+  volume    = {5},
+  number    = {2},
+  pages     = {568–573},
+  doi       = {10.19026/rjaset.5.4991},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
 }
 
 @InProceedings{Xiao2014,
@@ -64334,6 +64578,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.19},
 }
 
+@Article{Zhang2020a,
+  author    = {Zhang, R. J. and Ye, F. Y.},
+  title     = {Measuring similarity for clarifying layer difference in multiplex ad hoc duplex information networks},
+  journal   = {Journal of Informetrics},
+  year      = {2020},
+  volume    = {14},
+  pages     = {100987},
+  doi       = {10.1016/j.joi.2019.100987},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+}
+
 @Article{Zhang2021o,
   author    = {Zhang, C. and Zhang, Q. and Yu, S. and Yu, J. J. Q. and Song, X.},
   title     = {Complicating the Social Networks for Better Storytelling: An Empirical Study of Chinese Historical Text and Novel},
@@ -64894,7 +65150,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.24},
 }
 
-@Article{Zhu2005,
+@InProceedings{Zhu2005,
+  author    = {Zhu, P. and Wilson, R. C.},
+  title     = {A study of graph spectra for comparing graphs},
+  booktitle = {British Machine Vision Conference},
+  year      = {2005},
+  owner     = {Vincent},
+  timestamp = {2024.04.22},
+  url       = {https://www.robots.ox.ac.uk/~phst/BMVC2005/papers/162/bmvc2005b.pdf},
+}
+
+@Article{Zhu2005b,
   author    = {Zhu, X. and Elmagarmid, A. K. and Xue, X. and Wu, L. and Catlin, A. C.},
   title     = {{InsightVideo}: toward hierarchical video content organization for efficient browsing, summarization and retrieval},
   journal   = {IEEE Transactions on Multimedia},
