--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1590,6 +1590,17 @@
   url       = {https://www.jstor.org/stable/40983824},
 }
 
+@InProceedings{Aly2021,
+  author    = {Aly, R. and Vlachos, A. and McDonald, R.},
+  title     = {Leveraging Type Descriptions for Zero-shot Named Entity Recognition and Classification},
+  booktitle = {59th Annual Meeting of the Association for Computational Linguistics and 11th International Joint Conference on Natural Language Processing},
+  year      = {2021},
+  pages     = {1516-1528},
+  doi       = {10.18653/v1/2021.acl-long.120},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+}
+
 @InProceedings{Amaldi2009,
   author    = {Amaldi, E. and Iuliano, C. and Jurkiewicz, T. and Mehlhorn, K. and Rizzi, R.},
   title     = {Breaking the O(m^2 n) Barrier for Minimum Cycle Bases},
@@ -5212,6 +5223,18 @@
   url       = {https://www.aclweb.org/anthology/D12-1091/},
 }
 
+@Article{Berglund2023,
+  author    = {Berglund, L. and Tong, M. and Kaufmann, M. and Balesni, M. and Cooper Stickland, A. and Korbak, T. and Evans, O.},
+  title     = {The Reversal Curse: LLMs trained on ``A is B'' fail to learn ``B is A''},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2309.12288},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://arxiv.org/abs/2309.12288},
+}
+
 @Book{Bergson1901,
   title     = {The world of dreams},
   publisher = {Philosophical Library},
@@ -5391,6 +5414,18 @@
   doi       = {10.1037/0022-3514.57.5.792},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Berscheid1994,
+  author    = {Berscheid, E.},
+  title     = {Interpersonal Relationships},
+  journal   = {Annual Review of Psychology},
+  year      = {1994},
+  volume    = {45},
+  pages     = {79–129},
+  doi       = {10.1146/annurev.ps.45.020194.000455},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @InProceedings{Berzak2011,
@@ -6402,6 +6437,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://dl.acm.org/citation.cfm?id=2380828},
+}
+
+@Article{Bohnet2023,
+  author    = {Bohnet, B. and Alberti, C. and Collins, M.},
+  title     = {Coreference Resolution through a seq2seq Transition-Based System},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2023},
+  volume    = {11},
+  pages     = {212–226},
+  doi       = {10.1162/tacl_a_00543},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @InProceedings{Boiman2008,
@@ -8416,6 +8463,18 @@
   timestamp = {2021.09.23},
 }
 
+@Article{Bubeck2023,
+  author    = {Bubeck, S. and Chandrasekaran, V. and Eldan, R. and Gehrke, J. and Horvitz, E. and Kamar, E. and Lee, P. and Lee, Y. T. and Li, Y. and Lundberg, S. and Nori, H. and Palangi, H. and Tulio Ribeiro, M. and Zhang, Y.},
+  title     = {Sparks of Artificial General Intelligence: Early experiments with GPT-4},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2303.12712},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://arxiv.org/abs/2303.12712},
+}
+
 @Book{Buchanan1929,
   title     = {Poetry and Mathematics},
   publisher = {John Day Company},
@@ -9136,6 +9195,18 @@
   pages     = {1616-1637},
   doi       = {10.1109/TKDE.2018.2807452},
   timestamp = {2017.09.27},
+}
+
+@Article{Cai2023,
+  author    = {Cai, Z. and Jiang, J. and Qing, Z. and Guo, X. and Zhang, M. and Lin, Z. and Mei, H. and Wei, C. and Wang, R. and Yin, W. and Fan, X. and Du, H. and Pan, L. and Gao, P. and Yang, Z. and Gao, Y. and Li, J. and Ren, T. and Wei, Y. and Wang, X. and Loy, C. C. and Yang, L. and Liu, Z.},
+  title     = {Digital Life Project: Autonomous 3D Characters with Social Intelligence},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CV},
+  pages     = {2312.04547},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://arxiv.org/abs/2312.04547},
 }
 
 @Book{Cairo2012,
@@ -10299,6 +10370,17 @@
   url       = {https://papers.nips.cc/paper/3700-reading-tea-leaves-how-humans-interpret-topic-models},
 }
 
+@InProceedings{Chang2009b,
+  author    = {Chang, J. and Boyd-Graber, J. and Blei, D. M.},
+  title     = {Connections between the lines: augmenting social networks with text},
+  booktitle = {15th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  year      = {2009},
+  pages     = {169-178},
+  doi       = {10.1145/1557019.1557044},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+}
+
 @Article{Chang2011,
   author    = {Chang, C.-C. and Lin, C.-J.},
   title     = {{LIBSVM}: A library for support vector machines},
@@ -10910,6 +10992,17 @@
   doi       = {10.21437/Interspeech.2021-609},
   owner     = {Vincent},
   timestamp = {2021.09.04},
+}
+
+@InProceedings{Chen2023,
+  author    = {Chen, N. and Wang, Y. and Jiang, H. and Cai, D. and Li, Y. and Chen, Z. and Wang, L. and Li, J.},
+  title     = {Large Language Models Meet Harry Potter: A Dataset for Aligning Dialogue Agents with Characters},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2023},
+  pages     = {8506-8520},
+  doi       = {10.18653/v1/2023.findings-emnlp.570},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @Book{Cheney2008,
@@ -14624,6 +14717,16 @@
   doi       = {10.1016/j.protcy.2016.05.101},
   owner     = {Vincent},
   timestamp = {2018.12.14},
+}
+
+@Book{DeVito2015,
+  title     = {The interpersonal communication},
+  publisher = {Global Edition},
+  year      = {2015},
+  author    = {DeVito, J. A.},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://slims.bakrie.ac.id/repository/f7d4f28f39e8b9d8cb794f6c4eb9cb0f.pdf},
 }
 
 @Article{Devitt1993,
@@ -20576,6 +20679,16 @@
   timestamp = {2021.07.24},
 }
 
+@InProceedings{Gandhi2023,
+  author    = {Gandhi, K. and Fränken, J.-P. and Gerstenberg, T. and Goodman, N.},
+  title     = {Understanding social reasoning in language models with language models},
+  booktitle = {37th Conference on Neural Information Processing Systems},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://openreview.net/forum?id=8bqjirgxQM},
+}
+
 @InProceedings{Ganesh2016,
   author    = {Ganesh, J. and Gupta, M. and Varma, V.},
   title     = {Doc2Sent2Vec: A Novel Two-Phase Approach for Learning Document Representation},
@@ -20707,6 +20820,17 @@
   doi       = {10.18653/v1/p18-5002},
   owner     = {Vincent},
   timestamp = {2021.06.21},
+}
+
+@InProceedings{Gao2023,
+  author    = {Gao, Q. C. and Emami, A.},
+  title     = {The Turing Quest: Can Transformers Make Good NPCs?},
+  booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
+  year      = {2023},
+  pages     = {93-103},
+  doi       = {10.18653/v1/2023.acl-srw.17},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @Article{Garas2012,
@@ -21608,6 +21732,17 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://books.google.fr/books?id=ONlZAAAAMAAJ},
+}
+
+@InProceedings{Girju2007,
+  author    = {Girju, R. and Nakov, P. and Nastase, V. and Szpakowicz, S. and Turney, P. and Yuret, D.},
+  title     = {SemEval-2007 Task 04: Classification of Semantic Relations between Nominals},
+  booktitle = {4th International Workshop on Semantic Evaluations},
+  year      = {2007},
+  pages     = {13-18},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://aclanthology.org/S07-1003/},
 }
 
 @InProceedings{Girshick2014,
@@ -23618,6 +23753,19 @@
   doi       = {10.1017/cbo9780511819520},
   owner     = {Vincent},
   timestamp = {2020.07.25},
+}
+
+@Article{Gurulingappa2012,
+  author    = {Gurulingappa, H. and Rajput, A. M. and Roberts, A. and Fluck, J. and Hofmann-Apitius, M. and Toldo, L.},
+  title     = {Development of a benchmark corpus to support the automatic extraction of drug-related adverse effects from medical case reports},
+  journal   = {Journal of Biomedical Informatics},
+  year      = {2012},
+  volume    = {45},
+  number    = {5},
+  pages     = {885–892},
+  doi       = {10.1016/j.jbi.2012.04.008},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @Article{Gutmann2012,
@@ -35717,6 +35865,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.11.08},
 }
 
+@InProceedings{Li2023,
+  author    = {Li, D. and Yang, Z. and Lan, Y. and Zhang, Y. and Zhao, H. and Zhao, G.},
+  title     = {Simple Approach for Aspect Sentiment Triplet Extraction Using Span-Based Segment Tagging and Dual Extractors},
+  booktitle = {46th ACM SIGIR Conference International on Research and Development in Information Retrieval},
+  year      = {2023},
+  pages     = {2374-2378},
+  doi       = {10.1145/3539618.3592060},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+}
+
 @Article{Li2024a,
   author    = {Li, L. and Corbett, J.},
   title     = {Social network analysis, habitus and the field of literary activity},
@@ -36508,6 +36667,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.11.26},
   url       = {https://arxiv.org/abs/2210.15332},
+}
+
+@Article{Liu2023,
+  author    = {Liu, N. F. and Lin, K. and Hewitt, J. and Paranjape, A. and Bevilacqua, M. and Petroni, F. and Liang, P.},
+  title     = {Lost in the Middle: How Language Models Use Long Contexts},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://arxiv.org/abs/2307.03172},
 }
 
 @InProceedings{Liu2023a,
@@ -44509,6 +44678,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.21},
 }
 
+@Article{Onishi2005,
+  author    = {Onishi, K. H. and Baillargeon, R.},
+  title     = {Do 15-Month-Old Infants Understand False Beliefs?},
+  journal   = {Science},
+  year      = {2005},
+  volume    = {308},
+  number    = {5719},
+  pages     = {255–258},
+  doi       = {10.1126/science.1107621},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+}
+
 @Article{Onnela2005,
   author    = {Onnela, J. P. and Saramaki, J. and Kertesz, J. and Kaski, K.},
   title     = {Intensity and coherence of motifs in weighted complex networks},
@@ -45496,6 +45678,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/s41593-021-00916-3},
   owner     = {Vincent},
   timestamp = {2023.08.12},
+}
+
+@InProceedings{Park2023,
+  author    = {Park, J. S. and O'Brien, J. and Cai, C. J. and Morris, M. R. and Liang, P. and Bernstein, M. S.},
+  title     = {Generative Agents: Interactive Simulacra of Human Behavior},
+  booktitle = {36th Annual ACM Symposium on User Interface Software and Technology},
+  year      = {2023},
+  number    = {2},
+  doi       = {10.1145/3586183.3606763},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @Book{Parker1987,
@@ -47323,6 +47516,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://uk.sagepub.com/en-gb/eur/social-network-analysis/book231856},
 }
 
+@Article{Premack1978,
+  author    = {Premack, D. and Woodruff, G.},
+  title     = {Does the chimpanzee have a theory of mind?},
+  journal   = {Behavioral and Brain Sciences},
+  year      = {1978},
+  volume    = {1},
+  number    = {4},
+  pages     = {515–526},
+  doi       = {10.1017/s0140525x00076512},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+}
+
 @Article{Prendergast2005,
   author    = {Prendergast, C.},
   title     = {Derrida's Hamlet},
@@ -47632,6 +47838,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2020.acl-demos.14},
   owner     = {Vincent},
   timestamp = {2023.11.30},
+}
+
+@Article{Qian2023,
+  author    = {Qian, C. and Cong, X. and Liu, W. and Yang, C. and Chen, W. and Su, Y. and Dang, Y. and Li, J. and Xu, J. and Li, D. and Liu, Z. and Sun, M.},
+  title     = {Communicative Agents for Software Development},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.SE},
+  pages     = {2307.07924},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://arxiv.org/abs/2307.07924},
 }
 
 @InProceedings{Qin2017a,
@@ -48351,6 +48569,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/bf02477860},
   owner     = {Vincent},
   timestamp = {2020.07.18},
+}
+
+@InProceedings{Rashkin2018,
+  author    = {Rashkin, H. and Bosselut, A. and Sap, M. and Knight, K. and Choi, Y.},
+  title     = {Modeling Naive Psychology of Characters in Simple Commonsense Stories},
+  booktitle = {56th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {2289-2299},
+  doi       = {10.18653/v1/p18-1213},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @InProceedings{Ratinov2009,
@@ -51386,6 +51615,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.10.25},
   url       = {https://arxiv.org/abs/2210.10994},
+}
+
+@InProceedings{Sang2022b,
+  author    = {Sang, Y. and Mou, X. and Yu, M. and Yao, S. and Li, J. and Stanton, J.},
+  title     = {TVShowGuess: Character Comprehension in Stories as Speaker Guessing},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2022},
+  pages     = {4267-4287},
+  doi       = {10.18653/v1/2022.naacl-main.317},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @Article{Sanjek1974,
@@ -58682,6 +58922,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://ids-pub.bsz-bw.de/frontdoor/index/index/docId/8770},
 }
 
+@Article{Tu2023,
+  author    = {Tu, Q. and Chen, C. and Li, J. and Li, Y. and Shang, S. and Zhao, D. and Wang, R. and Yan, R.},
+  title     = {CharacterChat: Learning towards Conversational AI with Personalized Social Support},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2308.10278},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://arxiv.org/abs/2308.10278},
+}
+
 @Book{Tufte1983,
   title     = {The Visual Display of Quantitative Information},
   publisher = {Graphics Press},
@@ -60828,6 +61080,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.09},
 }
 
+@Article{Wang2023,
+  author    = {Wang, S. and Liu, C. and Zheng, Z. and Qi, S. and Chen, S. and Yang, Q. and Zhao, A. and Wang, C. and Song, S. and Huang, G.},
+  title     = {Avalon's Game of Thoughts: Battle Against Deception through Recursive Contemplation},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.AI},
+  pages     = {2310.01320},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://arxiv.org/abs/2310.01320},
+}
+
+@InProceedings{Wang2024,
+  author    = {Wang, X. and Li, C. and Wang, Z. and Bai, F. and Luo, H. and Zhang, J. and Jojic, N. and Xing, E. and Hu, Z.},
+  title     = {PromptAgent: Strategic Planning with Language Models Enables Expert-level Prompt Optimization},
+  booktitle = {12th International Conference on Learning Representations},
+  year      = {2024},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://openreview.net/forum?id=22pyNMuIoa},
+}
+
 @Article{Wanner2011,
   author    = {Wanner, F. and Fuchs, J. and Oelke, D. and Keim, D. A.},
   title     = {Are my children old enough to read these books? Age suitability analysis},
@@ -61092,6 +61366,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/bife.2012.23},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@InProceedings{Wei2022,
+  author    = {Wei, J. and Wang, X. and Schuurmans, D. and Bosma, M. and Ichter, B. and Xia, F. and Chi, E. and Le, Q. and Zhou, D.},
+  title     = {Chain-of-thought prompting elicits reasoning in large language models},
+  booktitle = {36th Conference on Neural Information Processing Systems},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://proceedings.neurips.cc/paper_files/paper/2022/hash/9d5609613524ecf4f15af0f7b31abca4-Abstract-Conference.html},
 }
 
 @TechReport{Weimann1980,
@@ -62044,6 +62328,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@Article{Wimmer1983,
+  author    = {Wimmer, H.},
+  title     = {Beliefs about beliefs: Representation and constraining function of wrong beliefs in young children’s understanding of deception},
+  journal   = {Cognition},
+  year      = {1983},
+  volume    = {13},
+  number    = {1},
+  pages     = {103–128},
+  doi       = {10.1016/0010-0277(83)90004-5},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+}
+
 @Article{Wingstedt2010,
   author    = {Wingstedt, J. and Brändström, S. and Berg, J.},
   title     = {Narrative Music, Visuals and Meaning in Film},
@@ -62306,6 +62603,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/C18-1167},
 }
 
+@Article{Worth2004,
+  author    = {Worth, S. E.},
+  title     = {Narrative understanding and understanding narrative},
+  journal   = {Contemporary Aesthetics},
+  year      = {2004},
+  volume    = {2},
+  number    = {1},
+  pages     = {9},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {http://hdl.handle.net/2027/spo.7523862.0002.009},
+}
+
 @Article{Worth2008,
   author    = {Worth, S. E.},
   title     = {Storytelling and Narrative Knowing: An Examination of the Epistemic Benefits of Well-Told Stories},
@@ -62508,6 +62818,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/comst.2018.2812301},
   owner     = {Vincent},
   timestamp = {2023.01.09},
+}
+
+@InProceedings{Wu2020,
+  author    = {Wu, L. and Petroni, F. and Josifoski, M. and Riedel, S. and Zettlemoyer, L.},
+  title     = {Scalable Zero-shot Entity Linking with Dense Entity Retrieval},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {6397-6407},
+  doi       = {10.18653/v1/2020.emnlp-main.519},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @InProceedings{Wu2021i,
@@ -62836,6 +63157,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2021.emnlp-main.663},
   owner     = {Vincent},
   timestamp = {2022.10.15},
+}
+
+@InProceedings{Xu2022,
+  author    = {Xu, Y. and Wang, D. and Yu, M. and Ritchie, D. and Yao, B. and Wu, T. and Zhang, Z. and Li, T. and Bradford, N. and Sun, B. and Hoang, T. and Sang, Y. and Hou, Y. and Ma, X. and Yang, D. and Peng, N. and Yu, Z. and Warschauer, M.},
+  title     = {Fantastic Questions and Where to Find Them: FairytaleQA – An Authentic Dataset for Narrative Comprehension},
+  booktitle = {60th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2022},
+  pages     = {447-460},
+  doi       = {10.18653/v1/2022.acl-long.34},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+}
+
+@Article{Xu2023,
+  author    = {Xu, Y. and Wang, S. and Li, P. and Luo, F. and Wang, X. and Liu, W. and Liu, Y.},
+  title     = {Exploring Large Language Models for Communication Games: An Empirical Study on Werewolf},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2309.04658},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://arxiv.org/abs/2309.04658},
 }
 
 @Article{Xuan2014,
@@ -63192,6 +63536,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://proceedings.neurips.cc/paper/2019/hash/dc6a7e655d7e5840e66733e9ee67cc69-Abstract.html},
 }
 
+@InProceedings{Yang2019a,
+  author    = {Yang, Z. and Choi, J. D.},
+  title     = {FriendsQA: Open-Domain Question Answering on TV Show Transcripts},
+  booktitle = {20th Annual SIGdial Meeting on Discourse and Dialogue},
+  year      = {2019},
+  pages     = {188-197},
+  doi       = {10.18653/v1/w19-5923},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+}
+
 @InProceedings{Yang2020,
   author    = {Yang, L. and Li, L. and Zhang, Z. and Zhou, X. and Zhou, E. and Liu, Y.},
   title     = {{DPGN}: Distribution Propagation Graph Network for Few-Shot Learning},
@@ -63275,6 +63630,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.15},
   url       = {https://arxiv.org/abs/1909.03193},
+}
+
+@InProceedings{Yao2023,
+  author    = {Yao, S. and Yu, D. and Zhao, J. and Shafran, I. and Griffiths, T. L. and Cao, Y. and Narasimhan, K. R.},
+  title     = {Tree of thoughts: Deliberate problem solving with large language models},
+  booktitle = {37th Conference on Neural Information Processing Systems},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://openreview.net/forum?id=5Xc1ecxO1h},
 }
 
 @Article{Yarkho2019,
@@ -63673,6 +64038,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pureportal.coventry.ac.uk/en/studentTheses/a-network-scientific-approach-to-the-quantitative-analysis-of-epi},
 }
 
+@InProceedings{You2020,
+  author    = {You, K. and Goldwasser, D.},
+  title     = {``where is this relationship going?'': Understanding relationship trajectories in narrative text},
+  booktitle = {9th Joint Conference on Lexical and Computational Semantics},
+  year      = {2020},
+  pages     = {168-178},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://aclanthology.org/2020.starsem-1.18/},
+}
+
 @Article{You2020a,
   author    = {You, E.-S. and Lee, O-J. and Kim, J.-T.},
   title     = {Computational Narrative Generation: A Survey},
@@ -63816,6 +64192,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-031-19097-1_26},
   owner     = {Vincent},
   timestamp = {2024.04.20},
+}
+
+@InProceedings{Yu2023,
+  author    = {Yu, J. and Paun, S. and Camilleri, M. and Garcia, P. and Chamberlain, J. and Kruschwitz, U. and Poesio, M.},
+  title     = {Aggregating Crowdsourced and Automatic Judgments to Scale Up a Corpus of Anaphoric Reference for Fiction and Wikipedia Texts},
+  booktitle = {17th Conference of the European Chapter of the Association for Computational Linguistics},
+  year      = {2023},
+  pages     = {767-781},
+  doi       = {10.18653/v1/2023.eacl-main.54},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @InProceedings{Yu2023a,
@@ -64792,6 +65179,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.01.13},
 }
 
+@InProceedings{Zhao2024,
+  author    = {Zhao, R. and Zhang, W. and Li, J. and Zhu, L. and Li, Y. and He, Y. and Gui, L.},
+  title     = {NarrativePlay: Interactive Narrative Understanding},
+  booktitle = {18th Conference of the European Chapter of the Association for Computational Linguistics},
+  year      = {2024},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
+  url       = {https://aclanthology.org/2024.eacl-demo.10/},
+}
+
 @Article{Zhao2024a,
   author    = {Zhao, R. and Zhu, Q. and Xu, H. and Li, J. and Zhou, Y. and He, Y. and Gui, L.},
   title     = {Large Language Models Fall Short: Understanding Complex Relationships in Detective Narratives},
@@ -65245,6 +65642,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-05710-7_22},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@InProceedings{Zhu2023,
+  author    = {Zhu, L. and Zhao, R. and Gui, L. and He, Y.},
+  title     = {Are {NLP} Models Good at Tracing Thoughts: An Overview of Narrative Understanding},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2023},
+  doi       = {10.18653/v1/2023.findings-emnlp.677},
+  owner     = {Vincent},
+  timestamp = {2024.04.24},
 }
 
 @Article{Zillman1977,
